# jean

./: Readme.md  pylintrc  pyproject.toml
jean/: __init__.py  _decoder.py
